# pymyq

./: .USER_AGENT  .coveragerc  .gitignore  LICENSE  Makefile  Pipfile  README.md  commitlint.config.js  example.py  pylintrc  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.py
.github/: ci.yml  dependabot.yml
pymyq/: __init__.py  __version__.py  account.py  api.py  const.py  device.py  errors.py  garagedoor.py  lamp.py  lock.py  request.py
